--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,11 @@ baseURL = 'https://drgnfireyellow.github.io'
 languageCode = 'en-us'
 title = 'DrgnFireYellow'
 theme = 'LoveIt'
+
+[params]
+  title = 'DrgnFireYellow'
+  [params.header.title]
+    name = "DrgnFireYellow"
+  [params.home.profile]
+    title = "DrgnFireYellow"
+    subtitle = "Hello world"
