--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://drgnfireyellow.github.io'
 languageCode = 'en-us'
 title = 'DrgnFireYellow'
-theme = 'LoveIt'
+theme = 'PaperMod'
 
 [params]
   title = 'DrgnFireYellow'
