--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: apt install python3 python3-pip && pip3 install pelican && pelican
+        run: sudo apt install python3 python3-pip && pip3 install pelican && pelican
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
